--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
           mkdir -p build
-          cp -rf /home/runner/work/MyApp/MyApp/build/* build/
+          cp -rf /home/runner/work/MyApp/MyApp/build/production/* build/production/
 
       - name: Upload build artifacts
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
