--- a/.github/workflows/sencha-app-build.yml
+++ b/.github/workflows/sencha-app-build.yml
@@ -20,9 +20,12 @@ jobs:
 
       - name: Install Sencha Cmd
         run: |
-          sudo npm install -g @sencha/cmd
-          sencha --version
-          sencha upgrade
+          wget https://trials.sencha.com/cmd/7.7.0/SenchaCmd-7.7.0.36-linux-amd64.sh.zip -O senchacmd.zip
+          unzip senchacmd.zip
+          rm senchacmd.zip
+          chmod +x SenchaCmd-7.7.0.36-linux-amd64.sh
+          ./SenchaCmd-7.7.0.36-linux-amd64.sh -q -dir /opt/Sencha/Cmd/7.7.0.36 -Dall=true
+          rm SenchaCmd-7.7.0.36-linux-amd64.sh
 
       - name: Build Sencha App
         run: sencha app build classic
