--- a/.github/workflows/sencha-app-build.yml
+++ b/.github/workflows/sencha-app-build.yml
@@ -28,4 +28,4 @@ jobs:
           rm SenchaCmd-7.7.0.36-linux-amd64.sh
 
       - name: Build Sencha App
-        run: sencha app build classic
+        run: /opt/Sencha/Cmd/7.7.0.36/sencha app build
