--- a/.github/workflows/sencha-app-build.yml
+++ b/.github/workflows/sencha-app-build.yml
@@ -3,7 +3,7 @@ name: Sencha App Build
 on:
   push:
     branches:
-      - master
+      - develop
 
 jobs:
   build:
@@ -36,4 +36,4 @@ jobs:
           git config --global user.email "jeremy800817@gmail.com"
           git add .
           git commit -m "Build Sencha app"
-          git push origin master
+          git push origin develop
